--- a/humanitaire.html
+++ b/humanitaire.html
@@ -71,7 +71,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Soutien et Engagements</a>
                     <div class="dropdown-menu m-0">
-                        <a href="service.html" class="dropdown-item">Service</a>
+                        <a href="service.html" class="dropdown-item">Nos Services</a>
                         <a href="donate.html" class="dropdown-item">Faire un don</a>
                         <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                         <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
@@ -81,10 +81,10 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Nos actions</a>
                     <div class="dropdown-menu m-0">
-                        <a href="ministere.html" class="dropdown-item">Ministère</a>
-                        <a href="fanfare.html" class="dropdown-item">Philharmonie</a>
-                        <a href="humanitaire.html" class="dropdown-item active" >Humanitaire</a>
-                        <a href="education.html" class="dropdown-item">Education</a>
+                        <a href="ministere.html" class="dropdown-item">Le Ministère</a>
+                        <a href="fanfare.html" class="dropdown-item">L'orchestre Philharmonie</a>
+                        <a href="humanitaire.html" class="dropdown-item active" >Aide Humanitaire et Education</a>
+                        <!-- <a href="education.html" class="dropdown-item">Education</a> -->
                 
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                       <p  class="mb-5">Au-delà de l'aide immédiate, notre objectif est d'autonomiser les individus et les communautés pour qu'ils puissent transformer leurs propres vies. Nous investissons dans des programmes de développement durable qui fournissent des compétences, des formations et des ressources, permettant ainsi aux bénéficiaires de devenir les agents du changement dans leur propre réalité. En favorisant leur croissance personnelle et professionnelle, nous créons un impact qui se propage au-delà des frontières géographiques.</p>
                       <p  class="mb-5">Notre engagement envers le soulagement de la souffrance et l'amélioration des conditions de vie transcende les limites géographiques et culturelles. Ensemble, nous faisons une différence significative en apportant un message d'espoir, de compassion et de solidarité à ceux qui ont le plus besoin d'aide.</p>
                     
-                        <a class="btn btn-outline-primary py-2 px-3" href="">
+                        <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
                           Faire un don
                             <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
@@ -164,60 +164,63 @@
 
 
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h1 class="fw-bold text-primary mb-4">Chari<span class="text-white">Team</span></h1>
-                    <p>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square me-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Newsletter</h5>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+   <!-- Footer Start -->
+   <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+                <h1 class="fw-bold text-primary m-0">    <img src="./img/logo.jfif" width="45" style="border-radius: 100%;"> La Grâce<span class="text-white"> Parle</span></h1>
+                <p>L'emplacement du centre se trouve en face de Santé pour tous à Jéricho</p>
+                <div class="d-flex pt-2">
+                    <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a> -->
+                    <a class="btn btn-square me-1" href="https://www.facebook.com/Samuel.DALUM"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square me-1" href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1" target="_blank"><i aria-colcount="fab"><img src="img/tik-tok.png" alt=""></i></a>
+                    <a class="btn btn-square me-1" href="https://www.instagram.com/la_grace_parle/?igshid=NTc4MTIwNjQ2YQ%3D%3D"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-square me-1" href="https://www.youtube.com/@lagraceparle8000/videos"><i class="fab fa-youtube"></i></a>
+                    <!-- <a class="btn btn-square me-0" href=""><i class="fab fa-linkedin-in"></i></a> -->
+
                 </div>
             </div>
-        </div>
-        <div class="container-fluid copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                    </div>
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light mb-4">Adresse</h5>
+                <p><i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour tous</p>
+                <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96</p>
+                <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light mb-4">Liens rapides</h5>
+                <a class="btn btn-link" href="about.html">
+                    À propos</a>
+                <a class="btn btn-link" href="contact.html">Contactez-nous</a>
+                <a class="btn btn-link" href="service.html">Nos services</a>
+                <a class="btn btn-link" href="">Termes et condition</a>
+                <a class="btn btn-link" href="">Support</a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h5 class="text-light mb-4">Newsletter</h5>
+                <p>Abonnez-vous à la Newsletter</p>
+                <div class="position-relative mx-auto" style="max-width: 400px;">
+                    <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Votre email">
+                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">S'inscrire</button>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Footer End -->
-
+    <div class="container-fluid copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    &copy; <a href="index.html">Fondation La Grâce Parle</a>, tous droits réservés.
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                    Designed By <a href="index.html">La Grâce Parle</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer End -->
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
