--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
-                        <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">Ce que nous faisons</div>
+                        <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">Ce que nous croyons</div>
                         <h1 class="display-6 mb-5">Nous aidons les personnes dans le besoin dans le monde entier</h1>
                         <div class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4">
                             <p class="text-dark mb-2">Animé par la foi, j'ai fondé cette fondation pour semer l'amour, l'espoir et l'entraide à travers chaque action</p>
