--- a/ministere.html
+++ b/ministere.html
@@ -222,15 +222,15 @@
   <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6"> 
                 <h1 class="fw-bold text-primary m-0">    <img src="./img/logo.jfif" width="45" style="border-radius: 100%;"> La Grâce<span class="text-white"> Parle</span></h1>
                 <p>L'emplacement du centre se trouve en face de Santé pour tous à Jéricho</p>
                 <div class="d-flex pt-2">
                     <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a> -->
-                    <a class="btn btn-square me-1" href="https://www.facebook.com/Samuel.DALUM"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square me-1" href="https://www.facebook.com/Samuel.DALUM"><i class="fab fa-facebook-f" target="_blank"></i></a>
                     <a class="btn btn-square me-1" href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1" target="_blank"><i aria-colcount="fab"><img src="img/tik-tok.png" alt=""></i></a>
-                    <a class="btn btn-square me-1" href="https://www.instagram.com/la_grace_parle/?igshid=NTc4MTIwNjQ2YQ%3D%3D"><i class="fab fa-instagram"></i></a>
-                    <a class="btn btn-square me-1" href="https://www.youtube.com/@lagraceparle8000/videos"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square me-1" href="https://www.instagram.com/la_grace_parle/?igshid=NTc4MTIwNjQ2YQ%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-square me-1" href="https://www.youtube.com/@lagraceparle8000/videos"><i class="fab fa-youtube" target="_blank"></i></a>
                     <!-- <a class="btn btn-square me-0" href=""><i class="fab fa-linkedin-in"></i></a> -->
 
                 </div>
