--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Service - La Grâce Parle-Fondation</title>
+    <title>Nos Services - La Grâce Parle Fondation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -109,7 +109,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header-service mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center">
-            <h1 class="display-4 text-white animated slideInDown mb-4">Service</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4">Nos Services</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="index.html">Accueil</a></li>
