--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Faire un Don-La_grace_parle Fondation</title>
+    <title>Faire un Don-La Grâce Parle Fondation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
