--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
           <form class="col-lg-3 col-md-6" id="subscribeForm">
             <div>
               <h5 class="text-light mb-4">Newsletter</h5>
-              <p>Recevoir une méditation tous les jours</p>
+              <p>Recevrez nos dernières actualités et mises à jour.</p>
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
                 <input
