Commit for wednesday

--- a/newsletter.html
+++ b/newsletter.html
@@ -72,9 +72,6 @@
     border-radius: 4px;
     cursor: pointer;
   }
-  .hidden {
-  display: none;
-}
 </style>
 
     <!-- Spinner Start -->
@@ -267,9 +264,7 @@
           <option value="other">Cap fm</option>
         </select>
         
-        <button id="submitButton" type="submit" class="btn-load">Soumettre</button>
-        <button id="loadingButton" class="btn-load hidden" disabled>Chargement...</button>
-        
+        <button type="submit">Soumettre</button>
       </form>
     <!-- Footer Start -->
     <div
