Commit for wednesday

--- a/newsletter.html
+++ b/newsletter.html
@@ -204,7 +204,7 @@
 
     <!-- Page Header Start -->
     <div
-      class="container-fluid page-header-don mb-5 wow fadeIn"
+      class="container-fluid page-header-newsletter mb-5 wow fadeIn"
       data-wow-delay="0.1s"
     >
       <div class="container text-center">
@@ -266,6 +266,7 @@
         
         <button type="submit">Soumettre</button>
       </form>
+      <p id="text"></p>
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
