Commit for wednesday

--- a/about.html
+++ b/about.html
@@ -553,21 +553,21 @@
               <p>Recevrez nos dernières actualités et mises à jour.</p>
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
-                <input
+                <!-- <input
                   class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                   type="email"
                   id="emails"
                   name="email"
                   required
                   placeholder="Votre email"
-                />
-                <button
+                /> -->
+                <a
                   id="openModalButton"
-                  type="submit"
+                  href="newsletter.html"
                   class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
                 >
                   Je m'abonne
-                </button>
+                </a>
               </div>
             </div>
           </form>
