--- a/fanfare.html
+++ b/fanfare.html
@@ -166,63 +166,112 @@
     <!-- About End -->
  
 
-      <!-- Footer Start -->
-      <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h1 class="fw-bold text-primary m-0">    <img src="./img/logo.jfif" width="45" style="border-radius: 100%;"> La Grâce<span class="text-white"> Parle</span></h1>
-                    <p>L'emplacement du centre se trouve en face de Santé pour tous à Jéricho</p>
-                    <div class="d-flex pt-2">
-                        <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a> -->
-                        <a class="btn btn-square me-1" href="https://www.facebook.com/Samuel.DALUM" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1" target="_blank"><i aria-colcount="fab"><img src="img/tik-tok.png" alt=""></i></a>
-                        <a class="btn btn-square me-1" href="https://www.instagram.com/la_grace_parle/?igshid=NTc4MTIwNjQ2YQ%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-square me-1" href="https://www.youtube.com/@lagraceparle8000/videos" target="_blank"><i class="fab fa-youtube"></i></a>
-                        <!-- <a class="btn btn-square me-0" href=""><i class="fab fa-linkedin-in"></i></a> -->
+    <!-- Footer Start -->
+    <div
+      class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
+      data-wow-delay="0.1s"
+    >
+      <div class="container py-5">
+        <div class="row g-5">
+          <div class="col-lg-3 col-md-6">
+            <h1 class="fw-bold text-primary m-0">
+              <img
+                src="./img/logo.jfif"
+                width="45"
+                style="border-radius: 100%"
+              />
+              La Grâce<span class="text-white"> Parle</span>
+            </h1>
+            <p>
+              L'emplacement du centre se trouve en face de Santé pour tous à
+              Jéricho
+            </p>
+            <div class="d-flex pt-2">
+              <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a> -->
+              <a
+                class="btn btn-square me-1"
+                href="https://www.facebook.com/Samuel.DALUM"
+                target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a
+                class="btn btn-square me-1"
+                href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
+                target="_blank"
+                ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+              ></a>
+              <a
+                class="btn btn-square me-1"
+                href="https://www.instagram.com/la_grace_parle/?igshid=NTc4MTIwNjQ2YQ%3D%3D"
+                target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a
+                class="btn btn-square me-1"
+                href="https://www.youtube.com/@lagraceparle8000/videos"
+                target="_blank"
+                ><i class="fab fa-youtube"></i
+              ></a>
+              <!-- <a class="btn btn-square me-0" href=""><i class="fab fa-linkedin-in"></i></a> -->
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <h5 class="text-light mb-4">Adresse</h5>
+            <p>
+              <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
+              tous
+            </p>
+            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96</p>
+            <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <h5 class="text-light mb-4">Liens rapides</h5>
+            <a class="btn btn-link" href="about.html"> À propos</a>
+            <a class="btn btn-link" href="contact.html">Contactez-nous</a>
+            <a class="btn btn-link" href="service.html">Nos services</a>
+            <a class="btn btn-link" href="mentions.html">Termes et condition</a>
+          </div>
 
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Adresse</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour tous</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96</p>
-                    <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Liens rapides</h5>
-                    <a class="btn btn-link" href="about.html">
-                        À propos</a>
-                    <a class="btn btn-link" href="contact.html">Contactez-nous</a>
-                    <a class="btn btn-link" href="service.html">Nos services</a>
-                    <a class="btn btn-link" href="mentions.html">Termes et condition</a>
-                 
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Newsletter</h5>
-                    <p>Recevoir une méditation tous les jours</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <!-- <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Votre email"> -->
-                        <p class="form-control bg-transparent w-100 py-3 ps-4 pe-5" >Newsletter</p>
-                        <button id="openModalButton" type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Je m'abonne</button>
-                    </div>
-                 
-                </div>
+          <form class="col-lg-3 col-md-6" id="subscribeForm">
+            <div>
+              <h5 class="text-light mb-4">Newsletter</h5>
+              <p>Recevrez nos dernières actualités et mises à jour.</p>
+              <div class="position-relative mx-auto" style="max-width: 800px">
+                <p id="messageParagraph"></p>
+                <!-- <input
+                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
+                  type="email"
+                  id="emails"
+                  name="email"
+                  required
+                  placeholder="Votre email"
+                /> -->
+                <a
+                  id="openModalButton"
+                  href="newsletter.html"
+                  class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
+                >
+                  Je m'abonne
+                </a>
+              </div>
             </div>
+          </form>
         </div>
-        <div class="container-fluid copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="index.html">Fondation La Grâce Parle</a>, tous droits réservés.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="index.html">La Grâce Parle</a>
-                    </div>
-                </div>
+      </div>
+      <div class="container-fluid copyright">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+              &copy; <a href="index.html">Fondation La Grâce Parle</a>, tous
+              droits réservés.
             </div>
+            <div class="col-md-6 text-center text-md-end">
+              <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+              Designed By <a href="index.html">La Grâce Parle</a>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <!-- Footer End -->
 
