Commit for wednesday

--- a/newsletter.html
+++ b/newsletter.html
@@ -227,6 +227,7 @@
     <!-- Page Header End -->
 
     <h1 class="" style="text-align: center;background: #ffc400;">Initiez votre journée en prenant des vitamines spirituelles !</h1>
+<div class="textLong">
     <p style="text-align: justify;">
         Chaque journée, le Ministère chrétien "La Grâce Parle" propose une réflexion inspirante en s'appuyant sur un passage biblique.
     </p>
@@ -237,6 +238,7 @@
         Si le temps vous manque pour lire la méditation, vous avez également la possibilité de l'écouter chaque jour... que ce soit dès le matin au réveil, pendant votre jogging ou même en voiture...
     </p>
     <p>Veuillez remplir tous les champs suivants :</p>
+</div>
     <form id="subscribeForm">
         <p id="messageParagraph"></p>
         <label for="names">Nom* :</label>
