Commit for wednesday

--- a/newsletter.html
+++ b/newsletter.html
@@ -227,7 +227,7 @@
     <!-- Page Header End -->
 
     <h1 class="" style="text-align: center;background: #ffc400;">Initiez votre journée en prenant des vitamines spirituelles !</h1>
-<div class="textLong">
+<div id="textLong">
     <p style="text-align: justify;">
         Chaque journée, le Ministère chrétien "La Grâce Parle" propose une réflexion inspirante en s'appuyant sur un passage biblique.
     </p>
