Commit for wednesday

--- a/newsletter.html
+++ b/newsletter.html
@@ -262,7 +262,7 @@
         
         </select>
         
-        <button type="submit">Soumettre</button>
+        <button id="submitButton" type="submit">Soumettre</button>
       </form>
       <p id="text"></p>
     <!-- Footer Start -->
