--- a/contact.html
+++ b/contact.html
@@ -426,6 +426,7 @@
     <script src="lib/parallax/parallax.min.js"></script>
 
     <!-- Template Javascript -->
+    <script src="js/contact.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
