--- a/index.html
+++ b/index.html
@@ -806,6 +806,7 @@
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
             <a class="btn btn-link" href="service.html">Nos services</a>
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
+            <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
 
           <form class="col-lg-3 col-md-6" id="subscribeForm">
