--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,8 @@
             class="text-white-50 ms-3"
             href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
             target="_blank"
-            ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+            ><i aria-colcount="fab"
+              ><img src="img/tik-tok.png" alt="tiktok" /></i
           ></a>
           <a
             class="text-white-50 ms-3"
@@ -127,8 +128,12 @@
                 >Soutien et Engagements</a
               >
               <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item">Nos Services</a>
-                <a href="donate.html" class="dropdown-item">Faire un don</a>
+                <a href="service.html" class="dropdown-item"
+                  >Nos différents services</a
+                >
+                <a href="donate.html" class="dropdown-item"
+                  >Faire un don à la fondation</a
+                >
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -142,7 +147,9 @@
                 >Nos actions</a
               >
               <div class="dropdown-menu m-0">
-                <a href="ministere.html" class="dropdown-item">Le Ministère</a>
+                <a href="ministere.html" class="dropdown-item"
+                  >Le centre chrétien</a
+                >
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
@@ -151,7 +158,24 @@
                 >
               </div>
             </div>
-            <a href="contact.html" class="nav-item nav-link active">Contact</a>
+
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle active"
+                data-bs-toggle="dropdown"
+                >Contactez-nous</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="contact.html" class="dropdown-item active"
+                  >Nous écrire un e-mail</a
+                >
+                <a href="newsletter.html" class="dropdown-item"
+                  >Abonnement a la newsletter</a
+                >
+                <a href="faq.html" class="dropdown-item">Faq</a>
+              </div>
+            </div>
           </div>
           <div class="d-none d-lg-flex ms-2">
             <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
@@ -276,6 +300,12 @@
                       <option value="Contact et Support ">
                         Contact et Support
                       </option>
+                      <option value="Partenariats et Collaborations">
+                        Partenariats et Collaborations
+                      </option>
+                      <option value="Ressources et Enseignements">
+                        Ressources et Enseignements
+                      </option>
                       <option value="Autres">Autres</option>
                     </select>
                     <label for="subject" name="subject">Sujet</label>
@@ -365,7 +395,8 @@
                 class="btn btn-square me-1"
                 href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
                 target="_blank"
-                ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+                ><i aria-colcount="fab"
+                  ><img src="img/tik-tok.png" alt="tiktok" /></i
               ></a>
               <a
                 class="btn btn-square me-1"
@@ -397,6 +428,7 @@
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
             <a class="btn btn-link" href="service.html">Nos services</a>
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
+            <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
 
           <form class="col-lg-3 col-md-6" id="subscribeForm">
@@ -406,13 +438,13 @@
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
                 <!-- <input
-                 class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
-                 type="email"
-                 id="emails"
-                 name="email"
-                 required
-                 placeholder="Votre email"
-               /> -->
+                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
+                  type="email"
+                  id="emails"
+                  name="email"
+                  required
+                  placeholder="Votre email"
+                /> -->
                 <a
                   id="openModalButton"
                   href="newsletter.html"
