--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             class="text-white-50 ms-3"
             href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
             target="_blank"
-            ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+            ><i aria-colcount="fab"
+              ><img src="img/tik-tok.png" alt="tiktok png" /></i
           ></a>
           <a
             class="text-white-50 ms-3"
@@ -128,8 +129,12 @@
                 >Soutien et Engagements</a
               >
               <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item">Nos Services</a>
-                <a href="donate.html" class="dropdown-item">Faire un don</a>
+                <a href="service.html" class="dropdown-item"
+                  >Nos différents services</a
+                >
+                <a href="donate.html" class="dropdown-item"
+                  >Faire un don à la fondation</a
+                >
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -143,7 +148,9 @@
                 >Nos actions</a
               >
               <div class="dropdown-menu m-0">
-                <a href="ministere.html" class="dropdown-item">Le Ministère</a>
+                <a href="ministere.html" class="dropdown-item"
+                  >Le centre chrétien</a
+                >
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
@@ -152,7 +159,24 @@
                 >
               </div>
             </div>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
+
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >Contactez-nous</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="contact.html" class="dropdown-item"
+                  >Nous écrire un e-mail</a
+                >
+                <a href="newsletter.html" class="dropdown-item"
+                  >Abonnement a la newsletter</a
+                >
+                <a href="faq.html" class="dropdown-item">Faq</a>
+              </div>
+            </div>
           </div>
           <div class="d-none d-lg-flex ms-2">
             <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
@@ -174,7 +198,11 @@
       <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="w-100" src="img/carousel-1.jfif" alt="Image" />
+            <img
+              class="w-100"
+              src="img/carousel-1.jfif"
+              alt="  Éclairant les âmes perdues, Répandant l'amour de Christ"
+            />
             <div class="carousel-caption">
               <div class="container">
                 <div class="row justify-content-center">
@@ -204,7 +232,11 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="w-100" src="img/all7.jpg" alt="Image" />
+            <img
+              class="w-100"
+              src="img/all7.jpg"
+              alt=" Philharmonie La Grâce Parle"
+            />
             <div class="carousel-caption">
               <div class="container">
                 <div class="row justify-content-center">
@@ -233,7 +265,11 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="w-100" src="img/about-2.jpg" alt="Image" />
+            <img
+              class="w-100"
+              src="img/about-2.jpg"
+              alt=" S'unir pour Changer, Partager et Guider"
+            />
             <div class="carousel-caption">
               <div class="container">
                 <div class="row justify-content-center">
@@ -296,13 +332,13 @@
               <img
                 class="position-absolute w-100 h-100 pt-5 pe-5"
                 src="img/about-1.jpg"
-                alt=""
+                alt=" S'unir pour Changer, Partager et Guider-1"
                 style="object-fit: cover"
               />
               <img
                 class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
                 src="img/about.jpg"
-                alt=""
+                alt=" S'unir pour Changer, Partager et Guider-2"
                 style="width: 200px; height: 200px"
               />
             </div>
@@ -408,13 +444,13 @@
               <img
                 class="position-absolute w-100 h-100 pt-5 pe-5"
                 src="img/about-5.jpg"
-                alt=""
+                alt="  Éclairant les âmes perdues, Répandant l'amour de Christ-1"
                 style="object-fit: cover; width: 100%"
               />
               <img
                 class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
                 src="img/about-4.jpg"
-                alt=""
+                alt="  Éclairant les âmes perdues, Répandant l'amour de Christ-2"
                 style="width: 200px; height: 200px"
               />
             </div>
@@ -428,13 +464,13 @@
               <img
                 class="position-absolute w-100 h-100 pt-5 pe-5"
                 src="img/all7.jpg"
-                alt=""
+                alt="  Philharmonie La Grâce Parle-1"
                 style="object-fit: cover"
               />
               <img
                 class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
                 src="img/about-6.jpg"
-                alt=""
+                alt="  Philharmonie La Grâce Parle-2"
                 style="width: 200px; height: 200px"
               />
             </div>
@@ -498,7 +534,11 @@
         <div class="row g-4 justify-content-center">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/church.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/church.png"
+                alt="   Transformation des Vies par l'évangile de Christ"
+              />
               <h4 class="mb-3">
                 Transformation des Vies par l'évangile de Christ
               </h4>
@@ -516,7 +556,11 @@
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/medical.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/medical.png"
+                alt="Traitement médical"
+              />
               <h4 class="mb-3">Traitement médical</h4>
               <p class="mb-4">
                 Nous offrons des soins essentiels pour préserver votre santé
@@ -532,7 +576,11 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/community.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/community.png"
+                alt="Développement communautaire"
+              />
               <h4 class="mb-3">Développement communautaire</h4>
               <p class="mb-4">Progression et lien au sein de la communauté</p>
               <!-- <a class="btn btn-outline-primary px-3" href="">
@@ -547,7 +595,11 @@
         <div class="row g-4 justify-content-center">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/icon-3.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/icon-3.png"
+                alt="Eau potable pure"
+              />
               <h4 class="mb-3">Eau potable pure</h4>
               <p class="mb-4">
                 L'accès à l'eau potable pure est fondamental pour la santé
@@ -564,7 +616,11 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/icon-1.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/icon-1.png"
+                alt="Éducation"
+              />
               <h4 class="mb-3">Éducation</h4>
               <p class="mb-4">
                 Acquisition de connaissances et compétences pour le
@@ -580,7 +636,11 @@
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/programm.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/programm.png"
+                alt="Programmes d'autonomisation économique"
+              />
               <h4 class="mb-3">Programmes d'autonomisation économique</h4>
               <p class="mb-4">
                 Initiatives pour renforcer l'indépendance financière et le
@@ -774,7 +834,8 @@
                 class="btn btn-square me-1"
                 href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
                 target="_blank"
-                ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+                ><i aria-colcount="fab"
+                  ><img src="img/tik-tok.png" alt="tiktok" /></i
               ></a>
               <a
                 class="btn btn-square me-1"
