--- a/mentions.html
+++ b/mentions.html
@@ -80,7 +80,8 @@
             class="text-white-50 ms-3"
             href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
             target="_blank"
-            ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+            ><i aria-colcount="fab"
+              ><img src="img/tik-tok.png" alt="tiktok" /></i
           ></a>
           <a
             class="text-white-50 ms-3"
@@ -103,7 +104,7 @@
       >
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
           <h1 class="fw-bold text-primary m-0">
-            <img src="./img/logo.jfif" width="35" style="border-radius: 100%" />
+            <img src="./img/logo.jfif" width="45" style="border-radius: 100%" />
             La Grâce<span class="text-white"> Parle</span>
           </h1>
         </a>
@@ -117,7 +118,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="index.html" class="nav-item nav-link">Accueil</a>
+            <a href="index.html" class="nav-item nav-link active">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
             <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
             <div class="nav-item dropdown">
@@ -128,8 +129,12 @@
                 >Soutien et Engagements</a
               >
               <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item">Nos Services</a>
-                <a href="donate.html" class="dropdown-item">Faire un don</a>
+                <a href="service.html" class="dropdown-item"
+                  >Nos différents services</a
+                >
+                <a href="donate.html" class="dropdown-item"
+                  >Faire un don à la fondation</a
+                >
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -143,7 +148,9 @@
                 >Nos actions</a
               >
               <div class="dropdown-menu m-0">
-                <a href="ministere.html" class="dropdown-item">Le Ministère</a>
+                <a href="ministere.html" class="dropdown-item"
+                  >Le centre chrétien</a
+                >
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
@@ -152,7 +159,24 @@
                 >
               </div>
             </div>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
+
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >Contactez-nous</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="contact.html" class="dropdown-item"
+                  >Nous écrire un e-mail</a
+                >
+                <a href="newsletter.html" class="dropdown-item"
+                  >Abonnement a la newsletter</a
+                >
+                <a href="faq.html" class="dropdown-item">Faq</a>
+              </div>
+            </div>
           </div>
           <div class="d-none d-lg-flex ms-2">
             <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
@@ -460,7 +484,8 @@
                 class="btn btn-square me-1"
                 href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
                 target="_blank"
-                ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+                ><i aria-colcount="fab"
+                  ><img src="img/tik-tok.png" alt="tiktok" /></i
               ></a>
               <a
                 class="btn btn-square me-1"
@@ -492,6 +517,7 @@
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
             <a class="btn btn-link" href="service.html">Nos services</a>
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
+            <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
 
           <form class="col-lg-3 col-md-6" id="subscribeForm">
@@ -501,13 +527,13 @@
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
                 <!-- <input
-                 class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
-                 type="email"
-                 id="emails"
-                 name="email"
-                 required
-                 placeholder="Votre email"
-               /> -->
+                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
+                  type="email"
+                  id="emails"
+                  name="email"
+                  required
+                  placeholder="Votre email"
+                /> -->
                 <a
                   id="openModalButton"
                   href="newsletter.html"
