--- a/ministere.html
+++ b/ministere.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ministère-La Grâce Parle Fondation</title>
+    <title>Ministère Chrétien-La Grâce Parle Fondation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -68,16 +68,24 @@
         </div>
         <div class="col-lg-6 px-5 text-end">
           <small>Suivez-nous sur:</small>
-          <a class="text-white-50 ms-3" href=""
+          <a
+            class="text-white-50 ms-3"
+            href="https://www.facebook.com/Samuel.DALUM"
+            target="_blank"
             ><i class="fab fa-facebook-f"></i
           ></a>
-          <a class="text-white-50 ms-3" href=""
-            ><i class="fab fa-twitter"></i
+          <!-- <a class="text-white-50 ms-3" href=""><i class="fab fa-twitter"></i></a> -->
+          <a
+            class="text-white-50 ms-3"
+            href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
+            target="_blank"
+            ><i aria-colcount="fab"
+              ><img src="img/tik-tok.png" alt="tiktok" /></i
           ></a>
-          <a class="text-white-50 ms-3" href=""
-            ><i class="fab fa-linkedin-in"></i
-          ></a>
-          <a class="text-white-50 ms-3" href=""
+          <a
+            class="text-white-50 ms-3"
+            href="https://instagram.com/la_grace_parle?igshid=NTc4MTIwNjQ2YQ=="
+            target="_blank"
             ><i class="fab fa-instagram"></i
           ></a>
           <a
@@ -120,8 +128,12 @@
                 >Soutien et Engagements</a
               >
               <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item">Nos Services</a>
-                <a href="donate.html" class="dropdown-item">Faire un don</a>
+                <a href="service.html" class="dropdown-item"
+                  >Nos différents services</a
+                >
+                <a href="donate.html" class="dropdown-item"
+                  >Faire un don à la fondation</a
+                >
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -136,18 +148,34 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="ministere.html" class="dropdown-item active"
-                  >Le Ministère</a
+                  >Le centre chrétien</a
                 >
                 <a href="fanfare.html" class="dropdown-item"
-                  >L'orchestre Philharmonie</a
+                  >L'Orchestre Philharmonie</a
                 >
                 <a href="humanitaire.html" class="dropdown-item"
                   >Aide Humanitaire et Education</a
                 >
-                <!-- <a href="education.html" class="dropdown-item">Education</a> -->
               </div>
             </div>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
+
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >Contactez-nous</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="contact.html" class="dropdown-item"
+                  >Nous écrire un e-mail</a
+                >
+                <a href="newsletter.html" class="dropdown-item"
+                  >Abonnement a la newsletter</a
+                >
+                <a href="faq.html" class="dropdown-item">Faq</a>
+              </div>
+            </div>
           </div>
           <div class="d-none d-lg-flex ms-2">
             <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
@@ -182,7 +210,7 @@
               <a class="text-white" href="#">Nos Actions</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Le ministère
+              Le centre chrétien
             </li>
           </ol>
         </nav>
@@ -254,13 +282,13 @@
               <img
                 class="position-absolute w-100 h-100 pt-5 pe-5"
                 src="img/about-5.jpg"
-                alt=""
+                alt="  Le centre chrétien"
                 style="object-fit: cover"
               />
               <img
                 class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
                 src="img/about-4.jpg"
-                alt=""
+                alt="  Le centre chrétien"
                 style="width: 200px; height: 200px"
               />
             </div>
@@ -438,7 +466,8 @@
                 class="btn btn-square me-1"
                 href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
                 target="_blank"
-                ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+                ><i aria-colcount="fab"
+                  ><img src="img/tik-tok.png" alt="tiktok" /></i
               ></a>
               <a
                 class="btn btn-square me-1"
@@ -470,6 +499,7 @@
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
             <a class="btn btn-link" href="service.html">Nos services</a>
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
+            <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
 
           <form class="col-lg-3 col-md-6" id="subscribeForm">
@@ -479,13 +509,13 @@
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
                 <!-- <input
-                 class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
-                 type="email"
-                 id="emails"
-                 name="email"
-                 required
-                 placeholder="Votre email"
-               /> -->
+                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
+                  type="email"
+                  id="emails"
+                  name="email"
+                  required
+                  placeholder="Votre email"
+                /> -->
                 <a
                   id="openModalButton"
                   href="newsletter.html"
