--- a/newsletter.html
+++ b/newsletter.html
@@ -83,124 +83,147 @@
     </div>
     <!-- Spinner End -->
 
-    <!-- Navbar Start -->
-    <div
-      class="container-fluid fixed-top px-0 wow fadeIn"
-      data-wow-delay="0.1s"
-    >
-      <div
-        class="top-bar text-white-50 row gx-0 align-items-center d-none d-lg-flex"
-      >
-        <div class="col-lg-6 px-5 text-start">
-          <small
-            ><i class="fa fa-map-marker-alt me-2"></i>Jéricho, Face santé pour
-            tous</small
-          >
-          <small class="ms-4"
-            ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
-          >
-        </div>
-        <div class="col-lg-6 px-5 text-end">
-          <small>Suivez-nous sur:</small>
-          <a
-            class="text-white-50 ms-3"
-            href="https://www.facebook.com/Samuel.DALUM"
-            target="_blank"
-            ><i class="fab fa-facebook-f"></i
-          ></a>
-          <!-- <a class="text-white-50 ms-3" href=""><i class="fab fa-twitter"></i></a> -->
-          <a
-            class="text-white-50 ms-3"
-            href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
-            target="_blank"
-            ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
-          ></a>
-          <a
-            class="text-white-50 ms-3"
-            href="https://instagram.com/la_grace_parle?igshid=NTc4MTIwNjQ2YQ=="
-            target="_blank"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a
-            class="text-white-50 ms-3"
-            href="https://www.youtube.com/@lagraceparle8000/videos"
-            target="_blank"
-            ><i class="fab fa-youtube"></i
-          ></a>
-        </div>
-      </div>
+     <!-- Navbar Start -->
+     <div
+     class="container-fluid fixed-top px-0 wow fadeIn"
+     data-wow-delay="0.1s"
+   >
+     <div
+       class="top-bar text-white-50 row gx-0 align-items-center d-none d-lg-flex"
+     >
+       <div class="col-lg-6 px-5 text-start">
+         <small
+           ><i class="fa fa-map-marker-alt me-2"></i>Jéricho, Face santé pour
+           tous</small
+         >
+         <small class="ms-4"
+           ><i class="fa fa-envelope me-2"></i>contact@lagraceparle.org</small
+         >
+       </div>
+       <div class="col-lg-6 px-5 text-end">
+         <small>Suivez-nous sur:</small>
+         <a
+           class="text-white-50 ms-3"
+           href="https://www.facebook.com/Samuel.DALUM"
+           target="_blank"
+           ><i class="fab fa-facebook-f"></i
+         ></a>
+         <!-- <a class="text-white-50 ms-3" href=""><i class="fab fa-twitter"></i></a> -->
+         <a
+           class="text-white-50 ms-3"
+           href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
+           target="_blank"
+           ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="tiktok" /></i
+         ></a>
+         <a
+           class="text-white-50 ms-3"
+           href="https://instagram.com/la_grace_parle?igshid=NTc4MTIwNjQ2YQ=="
+           target="_blank"
+           ><i class="fab fa-instagram"></i
+         ></a>
+         <a
+           class="text-white-50 ms-3"
+           href="https://www.youtube.com/@lagraceparle8000/videos"
+           target="_blank"
+           ><i class="fab fa-youtube"></i
+         ></a>
+       </div>
+     </div>
 
-      <nav
-        class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
-        data-wow-delay="0.1s"
-      >
-        <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-          <h1 class="fw-bold text-primary m-0">
-            <img src="./img/logo.jfif" width="45" style="border-radius: 100%" />
-            La Grâce<span class="text-white"> Parle</span>
-          </h1>
-        </a>
-        <button
-          type="button"
-          class="navbar-toggler me-4"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarCollapse"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="index.html" class="nav-item nav-link">Accueil</a>
-            <a href="about.html" class="nav-item nav-link">À propos</a>
-            <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Soutien et Engagements</a
-              >
-              <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item">Nos Services</a>
-                <a href="donate.html" class="dropdown-item">Faire un don</a>
-                <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
-                <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
-                <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
-              </div>
-            </div>
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Nos actions</a
-              >
-              <div class="dropdown-menu m-0">
-                <a href="ministere.html" class="dropdown-item">Le Ministère</a>
-                <a href="fanfare.html" class="dropdown-item"
-                  >L'Orchestre Philharmonie</a
-                >
-                <a href="humanitaire.html" class="dropdown-item"
-                  >Aide Humanitaire et Education</a
-                >
-              </div>
-            </div>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
-          </div>
-          <div class="d-none d-lg-flex ms-2">
-            <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
-              Faire un don
-              <div
-                class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
-              >
-                <i class="fa fa-arrow-right"></i>
-              </div>
-            </a>
-          </div>
-        </div>
-      </nav>
-    </div>
-    <!-- Navbar End -->
+     <nav
+       class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn"
+       data-wow-delay="0.1s"
+     >
+       <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
+         <h1 class="fw-bold text-primary m-0">
+           <img src="./img/logo.jfif" width="45" style="border-radius: 100%" />
+           La Grâce<span class="text-white"> Parle</span>
+         </h1>
+       </a>
+       <button
+         type="button"
+         class="navbar-toggler me-4"
+         data-bs-toggle="collapse"
+         data-bs-target="#navbarCollapse"
+       >
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarCollapse">
+         <div class="navbar-nav ms-auto p-4 p-lg-0">
+           <a href="index.html" class="nav-item nav-link active">Accueil</a>
+           <a href="about.html" class="nav-item nav-link">À propos</a>
+           <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
+           <div class="nav-item dropdown">
+             <a
+               href="#"
+               class="nav-link dropdown-toggle"
+               data-bs-toggle="dropdown"
+               >Soutien et Engagements</a
+             >
+             <div class="dropdown-menu m-0">
+               <a href="service.html" class="dropdown-item"
+                 >Nos différents services</a
+               >
+               <a href="donate.html" class="dropdown-item"
+                 >Faire un don à la fondation</a
+               >
+               <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
+               <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
+               <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
+             </div>
+           </div>
+           <div class="nav-item dropdown">
+             <a
+               href="#"
+               class="nav-link dropdown-toggle"
+               data-bs-toggle="dropdown"
+               >Nos actions</a
+             >
+             <div class="dropdown-menu m-0">
+               <a href="ministere.html" class="dropdown-item"
+                 >Le centre chrétien</a
+               >
+               <a href="fanfare.html" class="dropdown-item"
+                 >L'Orchestre Philharmonie</a
+               >
+               <a href="humanitaire.html" class="dropdown-item"
+                 >Aide Humanitaire et Education</a
+               >
+             </div>
+           </div>
+
+           <div class="nav-item dropdown">
+             <a
+               href="#"
+               class="nav-link dropdown-toggle active"
+               data-bs-toggle="dropdown"
+               >Contactez-nous</a
+             >
+             <div class="dropdown-menu m-0">
+               <a href="contact.html" class="dropdown-item"
+                 >Nous écrire un e-mail</a
+               >
+               <a href="newsletter.html" class="dropdown-item active"
+                 >Abonnement a la newsletter</a
+               >
+               <a href="faq.html" class="dropdown-item">Faq</a>
+             </div>
+           </div>
+         </div>
+         <div class="d-none d-lg-flex ms-2">
+           <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
+             Faire un don
+             <div
+               class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+             >
+               <i class="fa fa-arrow-right"></i>
+             </div>
+           </a>
+         </div>
+       </div>
+     </nav>
+   </div>
+   <!-- Navbar End -->
 
     <!-- Page Header Start -->
     <div
@@ -265,6 +288,7 @@
         <button id="submitButton" type="submit">Soumettre</button>
       </form>
       <p id="text"></p>
+
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
@@ -297,7 +321,7 @@
                 class="btn btn-square me-1"
                 href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
                 target="_blank"
-                ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+                ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="tiktok" /></i
               ></a>
               <a
                 class="btn btn-square me-1"
@@ -329,6 +353,7 @@
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
             <a class="btn btn-link" href="service.html">Nos services</a>
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
+            <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
 
           <form class="col-lg-3 col-md-6" id="subscribeForm">
