--- a/service.html
+++ b/service.html
@@ -79,7 +79,8 @@
             class="text-white-50 ms-3"
             href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
             target="_blank"
-            ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+            ><i aria-colcount="fab"
+              ><img src="img/tik-tok.png" alt="tiktok" /></i
           ></a>
           <a
             class="text-white-50 ms-3"
@@ -128,9 +129,11 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="service.html" class="dropdown-item active"
-                  >Nos Services</a
+                  >Nos différents services</a
                 >
-                <a href="donate.html" class="dropdown-item">Faire un don</a>
+                <a href="donate.html" class="dropdown-item"
+                  >Faire un don à la fondation</a
+                >
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -144,7 +147,9 @@
                 >Nos actions</a
               >
               <div class="dropdown-menu m-0">
-                <a href="ministere.html" class="dropdown-item">Le Ministère</a>
+                <a href="ministere.html" class="dropdown-item"
+                  >Le centre chrétien</a
+                >
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
@@ -153,7 +158,24 @@
                 >
               </div>
             </div>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
+
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >Contactez-nous</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="contact.html" class="dropdown-item"
+                  >Nous écrire un e-mail</a
+                >
+                <a href="newsletter.html" class="dropdown-item"
+                  >Abonnement a la newsletter</a
+                >
+                <a href="faq.html" class="dropdown-item">Faq</a>
+              </div>
+            </div>
           </div>
           <div class="d-none d-lg-flex ms-2">
             <a class="btn btn-outline-primary py-2 px-3" href="donate.html">
@@ -216,7 +238,11 @@
         <div class="row g-4 justify-content-center">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/church.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/church.png"
+                alt=" Transformation des Vies par l'évangile de Christ"
+              />
               <h4 class="mb-3">
                 Transformation des Vies par l'évangile de Christ
               </h4>
@@ -234,7 +260,11 @@
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/medical.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/medical.png"
+                alt="Traitement médical"
+              />
               <h4 class="mb-3">Traitement médical</h4>
               <p class="mb-4">
                 Nous offrons des soins essentiels pour préserver votre santé
@@ -250,7 +280,11 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/community.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/community.png"
+                alt="Développement communautaire"
+              />
               <h4 class="mb-3">Développement communautaire</h4>
               <p class="mb-4">Progression et lien au sein de la communauté</p>
               <!-- <a class="btn btn-outline-primary px-3" href="">
@@ -265,7 +299,12 @@
         <div class="row g-4 justify-content-center">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/icon-3.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/icon-3.png"
+                alt="L'accès à l'eau potable pure est fondamental pour la santé
+              globale."
+              />
               <h4 class="mb-3">Eau potable pure</h4>
               <p class="mb-4">
                 L'accès à l'eau potable pure est fondamental pour la santé
@@ -282,7 +321,12 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/icon-1.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/icon-1.png"
+                alt="   Acquisition de connaissances et compétences pour le
+              développement personnel."
+              />
               <h4 class="mb-3">Éducation</h4>
               <p class="mb-4">
                 Acquisition de connaissances et compétences pour le
@@ -298,7 +342,12 @@
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-              <img class="img-fluid mb-4" src="img/programm.png" alt="" />
+              <img
+                class="img-fluid mb-4"
+                src="img/programm.png"
+                alt="     Initiatives pour renforcer l'indépendance financière et le
+              développement personnel."
+              />
               <h4 class="mb-3">Programmes d'autonomisation économique</h4>
               <p class="mb-4">
                 Initiatives pour renforcer l'indépendance financière et le
@@ -349,7 +398,8 @@
                 class="btn btn-square me-1"
                 href="https://www.tiktok.com/@lagraceparle.officiel?_t=8ekVXKowouT&_r=1"
                 target="_blank"
-                ><i aria-colcount="fab"><img src="img/tik-tok.png" alt="" /></i
+                ><i aria-colcount="fab"
+                  ><img src="img/tik-tok.png" alt="tiktok" /></i
               ></a>
               <a
                 class="btn btn-square me-1"
@@ -381,6 +431,7 @@
             <a class="btn btn-link" href="contact.html">Contactez-nous</a>
             <a class="btn btn-link" href="service.html">Nos services</a>
             <a class="btn btn-link" href="mentions.html">Termes et condition</a>
+            <a class="btn btn-link" href="faq.html">Faq</a>
           </div>
 
           <form class="col-lg-3 col-md-6" id="subscribeForm">
@@ -390,13 +441,13 @@
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
                 <!-- <input
-                class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
-                type="email"
-                id="emails"
-                name="email"
-                required
-                placeholder="Votre email"
-              /> -->
+                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
+                  type="email"
+                  id="emails"
+                  name="email"
+                  required
+                  placeholder="Votre email"
+                /> -->
                 <a
                   id="openModalButton"
                   href="newsletter.html"
