--- a/contact.html
+++ b/contact.html
@@ -337,6 +337,32 @@
                   </div>
                 </div>
                 <div class="col-12">
+                  <div class="form-check">
+                    <input
+                      type="checkbox"
+                      class="form-check-input"
+                      id="whatsappCheckbox"
+                    />
+                    <label class="form-check-label" for="whatsappCheckbox"
+                      >Je souhaite être contacté sur WhatsApp</label
+                    >
+                  </div>
+                </div>
+
+                <div class="col-12" id="phoneNumberField" style="display: none">
+                  <div class="form-floating">
+                    <input
+                      type="tel"
+                      class="form-control"
+                      required
+                      id="phoneNumber"
+                      placeholder="Votre numéro de téléphone"
+                    />
+                    <label for="phoneNumber">Numéro de téléphone</label>
+                  </div>
+                </div>
+
+                <div class="col-12">
                   <button
                     id="submitButton"
                     type="submit"
