--- a/ministere.html
+++ b/ministere.html
@@ -294,13 +294,13 @@
             >
               <img
                 class="position-absolute w-100 h-100 pt-5 pe-5"
-                src="img/about-5.jpg"
+                src="img/about-5.jfif"
                 alt="  Le centre chrétien"
                 style="object-fit: cover"
               />
               <img
                 class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
-                src="img/about-4.jpg"
+                src="img/about-4.jfif"
                 alt="  Le centre chrétien"
                 style="width: 200px; height: 200px"
               />
