--- a/about.html
+++ b/about.html
@@ -247,14 +247,14 @@
     <div
       style="
         height: 300px;
-        background-image: url(img/about-5.jpg);
+        background-image: url(img/about-5.jfif);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
       "
     ></div>
-    <!-- <img src="img/about-4.jpg" style="width: 100%;max-height: 600px;object-fit: cover;"> -->
+    <!-- <img src="img/about-4.jfif" style="width: 100%;max-height: 600px;object-fit: cover;"> -->
     <br />
     <h2 style="text-align: center">Notre Vision</h2>
     <p style="text-align: justify; padding: 20px">
