--- a/index.html
+++ b/index.html
@@ -456,13 +456,13 @@
             >
               <img
                 class="position-absolute w-100 h-100 pt-5 pe-5"
-                src="img/about-5.jpg"
+                src="img/about-5.jfif"
                 alt="  Éclairant les âmes perdues, Répandant l'amour de Christ-1"
                 style="object-fit: cover; width: 100%"
               />
               <img
                 class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
-                src="img/about-4.jpg"
+                src="img/about-4.jfif"
                 alt="  Éclairant les âmes perdues, Répandant l'amour de Christ-2"
                 style="width: 200px; height: 200px"
               />
