--- a/contact.html
+++ b/contact.html
@@ -248,6 +248,11 @@
               pour vous fournir les réponses dont vous avez besoin et pour
               faciliter votre compréhension de notre mission et de nos actions.
             </p>
+            <p>
+              Consulter notre liste de questions auxquelles nous avons déjà
+              répondu
+              <a href="faq.html">Notre liste de questions déjà répondues</a>
+            </p>
 
             <form id="subscribeForm">
               <div class="row g-3">
@@ -287,7 +292,12 @@
                     />
                     <label for="subject">Sujet</label> -->
 
-                    <select class="form-control" id="subject" name="subject">
+                    <select
+                      required
+                      class="form-control"
+                      id="subject"
+                      name="subject"
+                    >
                       <option value="" disabled selected>
                         Choisissez un sujet
                       </option>
