--- a/faq.html
+++ b/faq.html
@@ -588,7 +588,7 @@
     </div>
 
     <div class="faq-container">
-      <h1>Partenariats et Collaborations :</h1>
+      <h1>Ressources et Enseignements:</h1>
       <div class="faq-item">
         <h2 class="question">
           Question 1 : Où puis-je trouver des ressources pour approfondir ma
