--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     </p>
                     <a
                       class="btn btn-primary py-2 px-3 animated slideInDown"
-                      href=""
+                      href="https://64e605ddd133fb0ec74c9b9f--clinquant-empanada-50cf63.netlify.app/"
                     >
                       visitez le site web
                       <div
