--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                       groupe chrétien de musique résonne avec l'amour divin.
                     </p>
                     <a
+                      target="_blank"
                       class="btn btn-primary py-2 px-3 animated slideInDown"
                       href="https://64e605ddd133fb0ec74c9b9f--clinquant-empanada-50cf63.netlify.app/"
                     >
